# lox-cpp

./: .clang-format  CMakeLists.txt  README.md  grammar.txt
src/: CMakeLists.txt  environment.cpp  environment.hpp  error.hpp  expr.cpp  expr.hpp  interpreter.cpp  interpreter.hpp  lox.cpp  lox.hpp  main.cpp  parser.cpp  parser.hpp  pch.hpp  printer.cpp  printer.hpp  resolver.cpp  resolver.hpp  scanner.cpp  scanner.hpp  stmt.hpp  token.cpp  token.hpp  value.cpp  value.hpp
test/: assignment.lox  class.lox  class.txt  closure.lox  fib.lox  for.lox  if.lox  logical.lox  logical.txt  operator.lox  operator.txt  test.py  var.lox  var.txt
